--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
+
+
+* {
+    font-family: "Roboto", sans-serif;
+}
+
+
+
+a.active {
+    @apply font-bold border-b-2 text-[#13c7e8];
+}
+
+.gradient-text {
+    @apply bg-gradient-to-r from-[#1fa2ff] to-[#06ffcb] via-[#12d8fa] bg-clip-text text-transparent;
+}
+
+.bg-gradient-brand {
+    @apply bg-gradient-to-r from-[#1fa2ff] via-[#12d8fa] to-[#06ffcb];
+}
